--- a/generoNCA.Rmd
+++ b/generoNCA.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "NCA"
 author: "Rampo"
-date: "21 de mayo de 2019-"
+date: "15 de abril de 2022"
 knit: (function(inputFile, encoding) {
       out_dir <- 'docs';
       rmarkdown::render(inputFile,
