--- a/generoNCA.Rmd
+++ b/generoNCA.Rmd
@@ -6,7 +6,7 @@ knit: (function(inputFile, encoding) {
       out_dir <- 'docs';
       rmarkdown::render(inputFile,
                         encoding="UTF-8",
-                        output_file=file.path(dirname(inputFile), out_dir, 'index.html')) })
+                        output_file=file.path(dirname(inputFile), out_dir, 'genero.html')) })
 output: html_document
 ---
 
