--- a/apuntes.Rmd
+++ b/apuntes.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "R"
-author: "Rampo"
-date: "19 de mayo de 2022"
+title: "Datos, estadísticas, tabulados y gráficos con R."
+#author: "Rampo"
+#date: "19 de mayo de 2022"
 knit: (function(inputFile, encoding) {
   out_dir <- 'docs';
   rmarkdown::render(inputFile,
@@ -9,29 +9,31 @@ knit: (function(inputFile, encoding) {
                     output_file=file.path(dirname(inputFile), out_dir, 'apuntes.html')) })
 output: html_document
 ---
-## Apuntes
+## Nivel 1
 
-### Instalar:
+[Clase 1:](clase01.html)
+Instalación, ayuda, búsquedas:
+R, CRAN, R-seek, RStudio, install.packages, library
+Variables y tipos, importar datos:
+vectores, matrices, factores, list, asignación
+dataframe, tibles
 
-#### Página principal de R:
-[https://www.r-project.org/](https://www.r-project.org/)
+[Clase 2:](clase02.html)
+Tibles, filtrar y agrupar:
+dplyr, filter, arrange, select, mutate,
+summarise, group_by, ungroup,
 
-Descargas o CRAN lleva a : [https://cran.r-project.org/mirrors.html](https://cran.r-project.org/mirrors.html)
+[Clase 3:](clase03.html)
+Tibles join, gráficos :
+inner_join, left_join, right_join, full_join, semi_join, anti_join
+ggplot, geom_point, facet_grid, geom_bar, stat_count, stat_summary
 
-Donde vemos una lista de "mirrors".
-
-De Argentina : El de la [Facultad de Ciencias Astronómicas y Geofísicas - UNLP](https://www.fcaglp.unlp.edu.ar/)
-
-http://mirror.fcaglp.unlp.edu.ar/CRAN/
-
-O uno general https://cloud.r-project.org/ que de alguna manera elije entre los disponibles.
-
-Descargamos el instalador para el SO y arquitectura correspondiente.
+[Clase 4:](clase04.html)
+Más gráficos , tabulados , fechas
+fill, position, geom_boxplot, coord_flip, geom_abline
+tabulados:
+gt, kableExtra, dt, plotly
+fechas:
+lubridate
 
 
-
-### Búsquedas:
-
-[https://rseek.org/](https://rseek.org/)
-
-[https://www.rdocumentation.org/](https://www.rdocumentation.org/)
