--- a/clase02.Rmd
+++ b/clase02.Rmd
@@ -14,3 +14,17 @@ Tibles, filtrar y agrupar:
 dplyr, filter, arrange, select, mutate,
 summarise, group_by, ungroup,
 ```
+
+library(readxl)
+#install.packages("readxl")
+
+# jul 2012 - feb 2022
+download.file("https://www.estadisticaciudad.gob.ar/eyc/wp-content/uploads/2022/02/Incidencia_div_niv_gral.xlsx", "Incidencia_div_niv_gral.xlsx")
+
+ipcba_a <- read_excel("Incidencia_div_niv_gral.xlsx", sheet = "Incidencia_div_niv_gral", col_names=TRUE, skip=2)
+
+head(ipcba_a)
+
+ipcba_a[1,3:23]
+
+ipcba_a[1,3:23]
