clase 3 group_by y join

--- a/clase01.Rmd
+++ b/clase01.Rmd
@@ -170,14 +170,19 @@ aumento(precios_enero, precios_marzo)
 ***
 
 ### Algunos datasets
+[Buenos Aires Data - Barrios](https://data.buenosaires.gob.ar/dataset/barrios)
+[Buenos Aires Data - Comunas](https://data.buenosaires.gob.ar/dataset/comunas)
 #### data.frame
 
 ```{r, echo=TRUE,  class.source='klippy'}
-barrios <- read.csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/barrios/barrios.csv", encoding = "UTF-8")
+# barrios <- read.csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/barrios/barrios.csv", encoding = "UTF-8")
+barrios <- read.csv("datos/barrios.csv", encoding = "UTF-8")
 
-poblacion <- read.csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/barrios/caba_pob_barrios_2010.csv", encoding = "UTF-8")
+# poblacion <- read.csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/barrios/caba_pob_barrios_2010.csv", encoding = "UTF-8")
+poblacion <- read.csv("datos/caba_pob_barrios_2010.csv", encoding = "UTF-8")
 
-comunas <- read.csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/comunas/comunas.csv", encoding = "UTF-8")
+# comunas <- read.csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/comunas/comunas.csv", encoding = "UTF-8")
+comunas <- read.csv("datos/comunas.csv", encoding = "UTF-8")
 
 names(barrios)
 
