--- a/clase03.Rmd
+++ b/clase03.Rmd
@@ -19,6 +19,8 @@ inner_join, left_join, right_join, full_join, semi_join, anti_join
 ggplot, geom_point, facet_grid, geom_bar, stat_count, stat_summary
 ```
 
+Una versión actualizada de este material en : [clase03](https://mar71n.github.io/rconr/clase03.html)
+
 ***
 
 ```{r, echo=TRUE,  class.source='klippy'}
