--- a/clase04.Rmd
+++ b/clase04.Rmd
@@ -17,3 +17,67 @@ gt, kableExtra, dt, plotly
 fechas:
 lubridate
 ```
+
+Una versión actualizada de este material en : [clase04](https://mar71n.github.io/rconr/clase04.html)
+
+***
+
+#### Para los graficos ya realizados.
+
+[ggplot2](https://ggplot2.tidyverse.org/)
+
+[aes()](https://ggplot2.tidyverse.org/reference/aes.html)
+
+```{r, echo=TRUE,  class.source='klippy'}
+library(dplyr)
+library(readr)
+library(ggplot2)
+library(lubridate)
+library(kableExtra)
+
+# https://data.buenosaires.gob.ar/dataset/plan-de-vacunacion-covid-19
+#vacunas <- read_csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/salud/plan-de-vacunacion-covid-19/dataset_total_vacunas.csv")
+vacunas <- read_csv("datos/dataset_total_vacunas.csv")
+
+data1 <- vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
+group_by(GENERO) %>% summarise(t = sum(total, na.rm=TRUE))
+
+ggplot(data1, aes(GENERO,t)) + 
+  geom_bar(stat="identity") 
+
+
+data2 <- vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
+  group_by(GRUPO_ETARIO, GENERO) %>% summarise(t = sum(total, na.rm=TRUE))
+
+ggplot(data2, aes(GENERO,t, fill=GRUPO_ETARIO)) + 
+  geom_bar(stat="identity") 
+```
+
+***
+***
+
+### Para presentación de tablas:
+
+[GT](https://gt.rstudio.com/)
+
+[kableExtra](https://www.rdocumentation.org/packages/kableExtra/versions/1.3.4)
+
+```{r, echo=TRUE,  class.source='klippy'}
+kbl(data1, caption="Vacunas por Genero", center=TRUE)
+```
+
+***
+***
+
+### Fechas en todos los formatos...
+
+[lubridate](https://lubridate.tidyverse.org/)
+
+```{r, echo=TRUE,  class.source='klippy'}
+dmy("28FEB2021")
+dmy("28/02/2021")
+dmy("29/02/2021")
+dmy("29/02/2020")
+
+dmy_hms("28FEB2021:15:15:00")
+```
