--- a/clase02.Rmd
+++ b/clase02.Rmd
@@ -36,20 +36,31 @@ library(lubridate)
 ```{r, echo=TRUE,  class.source='klippy'}
 # https://data.buenosaires.gob.ar/dataset/plan-de-vacunacion-covid-19
 #vacunas <- read_csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/salud/plan-de-vacunacion-covid-19/dataset_total_vacunas.csv")
+# download.file("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/salud/plan-de-vacunacion-covid-19/dataset_total_vacunas.csv", "datos/dataset_total_vacunas.csv")
 vacunas <- read_csv("datos/dataset_total_vacunas.csv")
 ```
 
 #### Una primera mirada, segun lo que esperemos, por lo general alguno de estos:
 ```{r, echo=TRUE,  class.source='klippy'}
+spec(vacunas)
+
 head(vacunas)
 
 summary(vacunas)
+# veo que en DOSIS_3 hay NAs
+
+vacunas[which(is.na(vacunas$DOSIS_3)),]
+
+# pongo cero en esos NAs 
+vacunas[which(is.na(vacunas$DOSIS_3)), "DOSIS_3"] <- 0
 
 str(vacunas)
 
 table(vacunas$GENERO)
 
 table(vacunas$GRUPO_ETARIO)
+
+vacunas %>% group_by(GENERO) %>% summarise(total = n())
 
 table(vacunas$VACUNA)
 ```
@@ -79,4 +90,24 @@ vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMIN
 vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
   filter(GRUPO_ETARIO == "51 a 60") %>%
   arrange(desc(total))
+```
+
+```{r, echo=TRUE,  class.source='klippy'}
+library(ggplot2)
+
+data1 <- vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
+group_by(GENERO) %>% summarise(t = sum(total, na.rm=TRUE))
+
+ggplot(data1, aes(GENERO,t, fill = GENERO)) + 
+  geom_bar(stat="identity", colour = "grey") +
+  geom_text(aes(label= t), vjust= -0.5, color="black", size=4)
+
+data2 <- vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
+  group_by(GRUPO_ETARIO, GENERO) %>% summarise(t = sum(total, na.rm=TRUE))
+
+ggplot(data2, aes(GENERO,t, fill=GRUPO_ETARIO)) + 
+  geom_bar(stat="identity") 
+
+ggplot(data2, aes(GRUPO_ETARIO, t, fill=GENERO)) + 
+  geom_bar(stat="identity") 
 ```
